// controller.proto
syntax = "proto3";

package proto;
option go_package = "adaptodb/pkg/proto";

// Reuse matching types from pkg/schema/types.go
message KeyRange {
  string start = 1;
  string end = 2;
}

message Schedule {
  uint64 ShardId = 1;
  repeated KeyRange KeyRanges = 2;
}

message UpdateScheduleRequest {
  repeated Schedule schedule = 1;
}

message UpdateScheduleResponse {
  string status = 1;
  string message = 2;
}

service Controller {
  rpc UpdateSchedule(UpdateScheduleRequest) returns (UpdateScheduleResponse) {}
}